style: fix song container alignment

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,9 @@ p, span, li, button {
 .align-i-center {
     align-items: center;
 }
+.justify-center {
+    justify-content: center;
+}
 .perfect-center {
     justify-content: center;
     align-items: center;
